re PR tree-optimization/44030 (error: SSA name in freelist but still referenced)

2010-05-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44030
	* tree-ssa-pre.c (eliminate): Copy NECESSARY flag.  Set
	NECESSARY flag if we propagate from a inserted expression.

	* gcc.c-torture/compile/pr44030.c: New testcase.

From-SVN: r159186